[gd_scene load_steps=5 format=2]

[ext_resource path="res://Inventory.gd" type="Script" id=1]
[ext_resource path="res://EquipmentSlots.gd" type="Script" id=2]
[ext_resource path="res://assets/grid.png" type="Texture" id=3]
[ext_resource path="res://GridBackPack.gd" type="Script" id=4]

[node name="Inventory" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )

[node name="InventoryBase" type="Panel" parent="."]
margin_left = -446.0
margin_top = -198.0
margin_right = 361.0
margin_bottom = 260.0

[node name="EquipmentSlots" type="Panel" parent="."]
self_modulate = Color( 0.192157, 0.176471, 0.176471, 1 )
margin_left = 124.0
margin_top = -166.0
margin_right = 335.0
margin_bottom = 219.0
script = ExtResource( 2 )

[node name="Head" type="Panel" parent="EquipmentSlots"]
margin_left = 124.4
margin_top = 14.0
margin_right = 192.4
margin_bottom = 62.0

[node name="Chest" type="Panel" parent="EquipmentSlots"]
margin_left = 112.0
margin_top = 86.0
margin_right = 202.0
margin_bottom = 209.0

[node name="Legs" type="Panel" parent="EquipmentSlots"]
margin_left = 112.0
margin_top = 229.15
margin_right = 202.0
margin_bottom = 352.15
__meta__ = {
"_edit_group_": true
}

[node name="Main_Hand" type="Panel" parent="EquipmentSlots"]
margin_left = 14.0
margin_top = 96.0
margin_right = 94.0
margin_bottom = 296.0
__meta__ = {
"_edit_group_": true
}

[node name="GridBackPack" type="TextureRect" parent="."]
self_modulate = Color( 0.300781, 0.274933, 0.274933, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -422.0
margin_top = -144.6
margin_right = 26.0
margin_bottom = 111.4
texture = ExtResource( 3 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}
